# automcp-example-openai-hackathon

./: pyproject.toml  run_mcp.py
