[project]
name = "openai-mcp-project"
version = "0.1.0"
description = "An openai agent project with MCP server integration"
requires-python = ">=3.10"
dependencies = [
    "naptha-automcp>=0.1.1",
    "openai-agents>=0.0.9",
    "pyyaml>=6.0.2",
]

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
serve_stdio = "run_mcp:serve_stdio"
serve_sse = "run_mcp:serve_sse"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
include = [ "run_mcp.py",]
exclude = [ "__pycache__", "*.pyc",]
sources = [ ".",]
packages = ["."]